# glnephexercise

libglnsvpos/: CMakeLists.txt  Etap_1_2_3.docx  KP_ch3.pro  README.md
libglnsvpos/include/libglnsvpos/: diffs.h  glnsvpos.h  rungekutta.h
libglnsvpos/src/: CMakeLists.txt  diffs.cpp  glnsvpos.cpp  main.cpp  rungekutta.cpp
libglnsvpos/test/: CMakeLists.txt  check_position.cpp
processing/: 111  Etap_1.docx  Etap_1v1.docx  Etap_1v2.docx  Этап_1v1.docx
simulation/: Etap2_nachalo.m  Etap_1_2.docx  KP_etap2.m  README.md  p2.m  proizv.m
